fix overflow header

--- a/styles/site/general.styl
+++ b/styles/site/general.styl
@@ -2,6 +2,7 @@ html
 	scroll-behavior smooth
 body
 	font-family $sans
+	overflow-x hidden
 
 button 
 	font-family $sans
