--- a/styles/site/header.styl
+++ b/styles/site/header.styl
@@ -11,7 +11,7 @@ header
 	left 0
 	background $bg
 	width 100%
-	overflow hidden
+	// overflow-x hidden
 	padding 0.5rem 0
 	
 	+mq('bp-m')
